--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
                                                                                             <h2>
                                                                                                 朋德投資股份有限公司：投資以實現創新</h2>
                                                                                             <p>
-                                                                                                朋德投資是台灣地區領先的、專注於金融及相關產業數位化、智慧化升級的私募股權基金管理公司。</p>
+                                                                                                朋德投資是台灣領先的、專注於金融及相關產業數位化、智慧化升級的私募股權基金管理公司。</p>
                                                                                             <p>
                                                                                                 具體投資領域涵蓋企業服務與產業互聯網/物聯網產業的高價值應用場景，及驅動其數智化的底層科技包括人工智慧、區塊鏈、雲端、大數據、安全、高效能運算等。</p>
                                                                                             <p>
@@ -3642,7 +3642,7 @@
                                                         <div class="title text-center aem-GridColumn aem-GridColumn--default--12">
                                                             <div id="title-f56b124b03" class="cmp-title">
                                                                 <h2 class="cmp-title__text">
-                                                                    朋德投資有限公司合作方</h2>
+                                                                    朋德投資股份有限公司第三方合作金融</h2>
                                                             </div>
 
 
