--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                                                                 <div class="header-logo">
                                                                     <a class="navbar-brand"
                                                                        data-tracking-information="AMD Logo"
-                                                                       href="/zh-tw.html">
-                                                                        <img src="/content/dam/code/images/header/amd-header-logo.svg"
+                                                                       href="/">
+                                                                        <img src="/logo2.png"
                                                                              alt="AMD Logo" title="AMD Logo" width="90"
                                                                              class="d-inline-block align-text-top"/>
                                                                     </a>
@@ -3650,10 +3650,10 @@
                                                         <div class="columns parbase aem-GridColumn aem-GridColumn--default--12">
 
 
-                                                            <div class="row row-cols-2 row-cols-md-2 row-cols-lg-4 row-cols-xl-4">
+                                                            <div class="row row-cols-2 row-cols-md-2 row-cols-lg-3 row-cols-xl-3">
 
 
-                                                                <div>
+                                                                <!--<div>
 
 
                                                                     <div class="container-parsys">
@@ -3666,9 +3666,9 @@
                                                                             <div class="cmp-container__content ">
 
 
-                                                                                <div class="aem-Grid aem-Grid--12 aem-Grid--default--12 ">
+                                                                                <div class="aem-Grid aem-Grid&#45;&#45;12 aem-Grid&#45;&#45;default&#45;&#45;12 ">
 
-                                                                                    <div class="teaser teaser-profile aem-GridColumn aem-GridColumn--default--12">
+                                                                                    <div class="teaser teaser-profile aem-GridColumn aem-GridColumn&#45;&#45;default&#45;&#45;12">
 
 
                                                                                         <div id="teaser-abde4b515e"
@@ -3716,7 +3716,7 @@
 
                                                                                                         </a>
                                                                                                     </div>
-                                                                                                    <div class="horzcontent">
+                                                                                                    &lt;!&ndash;<div class="horzcontent">
                                                                                                         <div class="card-body">
                                                                                                             <h3 class="card-title">
                                                                                                                 <a class="card-heading-link"
@@ -3724,24 +3724,24 @@
                                                                                                                 </a>
                                                                                                             </h3>
                                                                                                             <div class="card-text">
-                                                                                                                <!--<p>
-                                                                                                                    企業發展部首席戰略長兼高級副總裁</p>-->
+                                                                                                                &lt;!&ndash;<p>
+                                                                                                                    企業發展部首席戰略長兼高級副總裁</p>&ndash;&gt;
 
                                                                                                             </div>
 
                                                                                                             <div class="card-links">
 
-                                                                                                                <!--<a class="card-link"
+                                                                                                                &lt;!&ndash;<a class="card-link"
                                                                                                                    id="teaser-abde4b515e-cta-4e6fc86449"
                                                                                                                    href="https://www.linkedin.com/in/mathew-hein-523a99/"
                                                                                                                    target="_blank">瞭解
                                                                                                                     Mat
-                                                                                                                    <i class="fass fa-angle-right"></i></a>-->
+                                                                                                                    <i class="fass fa-angle-right"></i></a>&ndash;&gt;
 
                                                                                                             </div>
 
                                                                                                         </div>
-                                                                                                    </div>
+                                                                                                    </div>&ndash;&gt;
                                                                                                 </div>
                                                                                             </article>
                                                                                         </div>
@@ -3759,7 +3759,7 @@
                                                                     </div>
 
 
-                                                                </div>
+                                                                </div>-->
 
 
                                                                 <div>
@@ -3827,7 +3827,7 @@
                                                                                                     </div>
                                                                                                     <div class="horzcontent">
                                                                                                         <div class="card-body">
-                                                                                                            <h3 class="card-title">
+                                                                                                            <h3 class="card-title" style="text-align: center">
                                                                                                                 <a class="card-heading-link"
                                                                                                                    target="_blank">華南銀行
                                                                                                                 </a>
@@ -3936,7 +3936,7 @@
                                                                                                     </div>
                                                                                                     <div class="horzcontent">
                                                                                                         <div class="card-body">
-                                                                                                            <h3 class="card-title">
+                                                                                                            <h3 class="card-title" style="text-align: center;">
                                                                                                                 <a class="card-heading-link"
                                                                                                                    target="_blank">玉山銀行
                                                                                                                 </a>
@@ -4045,7 +4045,7 @@
                                                                                                     </div>
                                                                                                     <div class="horzcontent">
                                                                                                         <div class="card-body">
-                                                                                                            <h3 class="card-title">
+                                                                                                            <h3 class="card-title" style="text-align: center;">
                                                                                                                 <a class="card-heading-link"
                                                                                                                    href="https://www.linkedin.com/in/patrick-rundell-97320034/"
                                                                                                                    target="_blank">台新銀行
